--- a/src/index.css
+++ b/src/index.css
@@ -2,36 +2,46 @@
 
 @font-face {
   font-family: 'Right Grotesk';
-  src: url('/public/fonts/RightGrotesk-CompactBlack.otf') format('otf'),
-    url('/public/fonts/RightGrotesk-NarrowLight.otf') format('otf');
+  src: url('/public/fonts/RightGrotesk-CompactBlack.woff2') format('woff2'),
+    url('/public/fonts/RightGrotesk-CompactBlack.otf') format('otf');
 
-  font-weight: normal;
-  font-style: normal;
+  font-weight: 500;
+  font-style: bold;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Biro Script Plus';
-  src: url('/public/fonts/BiroScriptPlus.woff2') format('woff2'),
-    url('/public/fonts/BiroScriptPlus-Bold.woff2') format('woff2');
+  src: url('/public/fonts/BiroScriptPlus.woff2') format('woff2');
 
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Messina Sans Mono';
+  src: url('/public/fonts/MessinaSansMono-Regular.woff2') format('woff2'),
+    url('/public/fonts/MessinaSansMono-Black.woff') format('woff');
+
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   margin: 0;
-  font-family: 
-  /* -apple-system, BlinkMacSystemFont,  */ 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    'Right Grotesk', 'Biro Script Plus', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Right Grotesk',
+    'Biro Script Plus', 'Messina Sans Mono', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #181818;
 }
 
 code {
-  font-family:
-   /* source-code-pro, Menlo, Monaco, Consolas,  */ 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     'Right Grotesk', 'Biro Script Plus', monospace;
 }
 
